--- a/src/main/resources/templates/patient/list.html
+++ b/src/main/resources/templates/patient/list.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-<!--    <link rel="stylesheet" href="../../css/bootstrap.min.css" >-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
-<body>
+<body style="padding-left:20px">
 <div class="row"><h2>Patient List</h2></div>
 <div class="row">
     <a href="/patient/add" class="btn btn-primary btn-sm">Add New</a>
