--- a/src/main/resources/templates/patient/update.html
+++ b/src/main/resources/templates/patient/update.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8"/>
   <title>Home</title>
-  <!--    <link rel="stylesheet" href="../../css/bootstrap.min.css" >-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
@@ -75,7 +74,6 @@
       </div>
     </div>
   </div>
-<!--&lt;!&ndash;&ndash;&gt;  <div th:if="${notes!=null and !notes.empty}">-->
   <div th:if="${note!=null and !note.empty}">
     <h2>Medical notes</h2>
     <table class="table table-bordered">
@@ -89,7 +87,7 @@
       <tbody>
       <tr th:each="notes : ${note}">
         <td style="width: 10%" th:text="${notes.id}"></td>
-        <td th:date="${notes.date}"></td>
+        <td th:text="${{notes.date}}"></td>
         <td th:text="${notes.patientNote}"></td>
         <td style="width: 15%" class="text-center">
           <a th:href="@{/note/{id}(id=${notes.id})}">Edit</a>&nbsp;|&nbsp;
@@ -98,27 +96,6 @@
       </tr>
       </tbody>
     </table>
-<!--    <table class="table table-bordered">
-      <tr >
-        <th>Date</th>
-        <th>Notes</th>
-        <th>Modify</th>
-        <th>Delete</th>
-      </tr>
-      <tr th:each="notes:${note}" >
-        <th th:text="${notes.date}"></th>
-        <th th:text="${note.getPatientNote()}"></th>
-        <th class="btn btn-primary" th:attr="onclick='window.location.href=\'/note/'+ ${note.getId()} +'\''">Edit</th>
-        <th>
-          <form th:action="@{/note/deleteNote}" th:method="delete">
-            <input type="hidden" name="noteId" th:value="${note.getId()}" />
-            <input type="hidden" name="patientId" th:value="${patient.getId()}" />
-            <input type="submit" value="Delete" class="btn btn-danger" />
-          </form>
-        </th>
-      </tr>
-    </table>-->
-
   </div>
   <a th:href="@{/note/{id}/addNote(id=${patient.getId()})}"> Add a note</a>
 </div>
